syntax = "proto3";

package artin.couriermanagement.finance;

option go_package = "github.com/kkjhamb01/courier-management/grpc/finance/go;financePb";

 
import "finance_model.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

message SetUpStripeUserRequest {
    artin.couriermanagement.common.UserType user_type = 1 ;
}

message SetUpStripeUserResponse {
    oneof event {
        OnboardingUrl onboarding_url = 1;
        OnboardingResult onboarding_result = 2;
    }
}

message GetClientSecretRequest {
}

message GetClientSecretResponse {
  string client_secret = 1;
}

message GetCustomerPaymentMethodsRequest {
}

message GetCustomerPaymentMethodsResponse {
  repeated PaymentMethod payment_method = 1;
}

message DeleteCustomerPaymentMethodRequest {
    string payment_method_id = 1;
}

message CreatePaymentRequest {
    string payment_method_id = 1 ;
    string request_id = 2;
    string courier_id = 3;
    double price = 4 ;
    string currency = 5 ;
}

message CreatePaymentResponse {
    string client_secret = 1;
}

message SetDefaultPaymentMethodRequest {
    string payment_method_id = 1 ;
}

message GetCourierPayableResponse {
    double price = 1;
    string currency = 2;
}

message GetRequestTransactionsRequest{
    string request_id = 1;
}

message GetRequestTransactionsResponse{
    repeated Transaction transactions = 1;
}

message GetTransactionsPaidByCustomerRequest{
    google.protobuf.Timestamp from = 1;
    google.protobuf.Timestamp to = 2;
}

message GetTransactionsPaidByCustomerResponse{
    message Item {
        string request_id = 1;
        double amount = 2;
        string currency = 3;
        google.protobuf.Timestamp created_at = 4;
    }
    repeated Item items = 1;
}

message GetTransactionsPaidToCourierRequest{
    int32 page_number = 1 ;
    int32 page_size = 2 ;
    google.protobuf.Timestamp from = 3;
    google.protobuf.Timestamp to = 4;
}

message GetTransactionsPaidToCourierResponse{
    repeated Transaction transactions = 1;
}

message GetAmountPaidToCourierRequest{
    google.protobuf.Timestamp from = 3;
    google.protobuf.Timestamp to = 4;
}

message GetAmountPaidToCourierResponse{
    int64 amount = 1;
    string currency = 2;
}
